# SmartRC-ADAS-Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: BatterySystem.h  SafetyBrain.h  ThermalSystem.h  VehicleState.h
src/: BatterySystem.cpp  SafetyBrain.cpp  ThermalSystem.cpp .cpp  main.cpp
